<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_type">@string/app_id</string>
    <string name="adplayer_counting_midroll">Video jatkuu %s s</string>
    <string name="adplayer_counting_postroll">Päättyy %s s</string>
    <string name="adplayer_counting_preroll">Video alkaa %s s</string>
    <string name="adplayer_visit_advertiser">Siirry mainostajan sivuille</string>
    <string name="allprograms_filter_all">Kaikki</string>
    <string name="allprograms_filter_button">Suodata</string>
    <string name="allprograms_filter_category">Tyylilajit</string>
    <string name="allprograms_filter_channel">Kanava</string>
    <string name="allprograms_filter_on_category">Suodata kategorian mukaan</string>
    <string name="allprograms_filter_on_channel">Suodata kanavan mukaan</string>
    <string name="allprograms_no_results_found">"Ohjelmaa ei löydy...
Yritä uudelleen!"</string>
    <string name="app_id">fi.viafree.android</string>
    <string name="app_name">Viafree</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio">Audio</string>
    <string name="back">Takaisin</string>
    <string name="blank">%s</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Näytetään %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_connecting_to_device">Connecting to %1$s</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_head_description">Current position is at the head of the live stream</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Lataus käynnissä…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip Ad</string>
    <string name="cast_expanded_controller_skip_ad_text">You can skip ad in %1$d…</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_invalid_stream_duration_text">--:--</string>
    <string name="cast_invalid_stream_position_text">--:--</string>
    <string name="cast_live_label">LIVE</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="change_email_title">Vaihda sähköposti</string>
    <string name="change_password_button_title">Vaihda salasana</string>
    <string name="change_password_cancel" />
    <string name="change_password_confirm_new_password">Nykyinen salasana</string>
    <string name="change_password_failed">Jotain meni pieleen</string>
    <string name="change_password_hint_new_password">Nykyinen salasana</string>
    <string name="change_password_hint_new_password_confirm">Nykyinen salasana</string>
    <string name="change_password_hint_old_password">Yusi salasana</string>
    <string name="change_password_invalid_new_password">Valitse salasana, jossa on vähintään 8 merkkiä</string>
    <string name="change_password_invalid_new_password_empty">Valitse salasana, jossa on vähintään 8 merkkiä</string>
    <string name="change_password_invalid_old_password">Väärä salasana</string>
    <string name="change_password_passwords_must_match">Väärä salasana</string>
    <string name="change_password_restore_button_title">Huomioi, että salasana vaihdetaan Viafree- ja Viaplay-palveluihin</string>
    <string name="change_password_restore_button_title_done">Okej</string>
    <string name="change_password_restore_no_account_with_that_email" />
    <string name="change_password_restore_sent_email_text">Olemme lähettäneet sinulla sähköpostin, josta löydät ohjeet salasanan vaihtoon</string>
    <string name="change_password_restore_text">Unohditko salasanasi? Ei hätää, syötä sähköpostiosoitteesi alle ja me lähetämme sinulle ohjeet salasanan vaihtoon.</string>
    <string name="change_password_restore_title">Vaihda salasana</string>
    <string name="change_password_title">Vaihda salasana</string>
    <string name="change_password_we_use_same_login_explanation">Huomioi, että salasana vaihdetaan Viafree- ja Viaplay-palveluihin</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="chromecast_connection_recovered">Yhdistetty Chromecastiin</string>
    <string name="chromecast_no_connection">Ei yhteyttä Chromecast-laitteeseen</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">38234350fa144afc9520e77a94f07687</string>
    <string name="common_button_no">Ei</string>
    <string name="common_button_yes">Kyllä</string>
    <string name="login_age_limit">15+</string>
    <string name="login_create_account">Eikö sinulla ole vielä tunnusta?</string>
    <string name="login_create_user_title">Luo tunnus</string>
    <string name="login_email_hint">Sähköposti</string>
    <string name="login_error_accept_terms">Hyväksy käyttöehdot</string>
    <string name="login_error_invalid_gender">Sukupuolta ei valittu</string>
    <string name="login_existing_account">Onko sinulla jo tunnus?</string>
    <string name="login_forgot_password">Salasana unohtunut?</string>
    <string name="login_info_watchFreeContent">Katso sarjoja, urheilua, dokumentteja ja muuta ainutlaatuista sisältöä ilmaiseksi.</string>
    <string name="login_login_with_facebook">Kirjaudu Facebook-tunnuksella</string>
    <string name="login_onboarding_create_account_button_text">OK</string>
    <string name="login_onboarding_create_account_description">Voit luoda tunnuksen myös myöhemmin tili-sivulla. Sieltä näet myös omat tietosi ja asetukset.</string>
    <string name="login_onboarding_create_account_hint">Täältä löydät tilitiedot</string>
    <string name="login_onboarding_create_account_title">Luo tili nyt!</string>
    <string name="login_options_divider_or">tai</string>
    <string name="login_page_forced_alreday_have_account">Onko sinulla jo tunnus?</string>
    <string name="login_page_forced_create_account">Luo tunnus</string>
    <string name="login_page_forced_login_description">Luo maksuton tunnus ja pääset jatkamaan katselua siitä mihin viimeksi jäit, pysyt aina ajan tasalla uusista ohjelmista, etkä missaa yhtään jaksoa, voit lisätä ohjelmia suosikkeihin ja saat loistavia suositteluja.</string>
    <string name="login_page_forced_login_title">Sinun täytyy kirjautua, jotta voit katsoa tämän ohjelman</string>
    <string name="login_password_hint">Salasana</string>
    <string name="login_signup_with_email">Luo tunnus</string>
    <string name="login_userData_age">Ikä</string>
    <string name="login_userData_female">Nainen</string>
    <string name="login_userData_gender">Sukupuoli</string>
    <string name="login_userData_male">Mies</string>
    <string name="login_userData_name">Nimi</string>
    <string name="login_userData_nonbinary">Muu</string>
    <string name="login_userData_postalnumber">Postinumero</string>
    <string name="login_wrong_credentials">Käyttäjätunnus tai salasana on virheellinen</string>
    <string name="myviafree_create_button_text">Luo tunnus</string>
    <string name="navigation_login">Kirjaudu sisään</string>
    <string name="navigation_myviafree">Tili</string>
    <string name="navigation_programs">Sarjat</string>
    <string name="navigation_sports">Urheilu</string>
    <string name="navigation_startpage">Koti</string>
    <string name="startpage_create_account">Luo tunnus</string>
    <string name="startpage_login_upsell_continue_watching">Luo tunnus ja jatka katselua siitä mihin jäit.</string>
    <string name="unknown_error">Jotain meni pieleen. Yritä myöhemmin uudelleen!</string>
    <string name="user_details_subscribe_to_newsletter">Haluan vastaanottaa vinkkejä ja uutisia Viafreelta ja Viaplaylta.</string>
</resources>