<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_start_page" android:enabled="true" android:id="@id/nav_start_page" android:title="@string/navigation_startpage" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_sports" android:enabled="true" android:id="@id/nav_sports_page" android:title="@string/navigation_sports" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_all_programs" android:enabled="true" android:id="@id/nav_all_programs" android:title="@string/navigation_programs" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_my_viafree" android:enabled="true" android:id="@id/nav_my_viafree" android:title="@string/navigation_myviafree" app:showAsAction="ifRoom" />
</menu>