<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="@dimen/default_horizontal_spacing" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="@style/textDefault.ExtraExtraExtraLarge.White" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="?actionBarSize" android:text="@string/login_onboarding_create_account_title" android:fontFamily="@font/mtg_sans_bold" />
    <TextView android:textAppearance="@style/textDefault.ExtraExtraLarge.White" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/login_onboarding_create_account_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_spacing_extra_large" android:text="@string/login_onboarding_create_account_button_text" style="@style/roundButtonStyleRed" />
    <TextView android:textAppearance="@style/textDefault.White" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_spacing_extra_large" android:text="@string/login_onboarding_create_account_description" android:fontFamily="@font/mtg_sans_regular" />
    <ImageView android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_spacing" android:src="@drawable/account_highlight_bar" />
    <TextView android:textAppearance="@style/textDefault.White" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_spacing" android:text="@string/login_onboarding_create_account_hint" android:fontFamily="@font/mtg_sans_bold" />
</LinearLayout>