<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@drawable/dialog_content_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:paddingBottom="@dimen/login_margin_medium" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/login_margin_large" android:paddingEnd="@dimen/login_margin_large">
            <androidx.appcompat.widget.AppCompatImageView android:id="@id/create_account_logo_view" android:layout_width="wrap_content" android:layout_height="53.0dip" android:layout_marginTop="20.0dip" android:src="@mipmap/ic_splash" app:layout_constraintEnd_toStartOf="parent" app:layout_constraintStart_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textAppearance="@style/vui_create_account_description" android:gravity="center" android:id="@id/create_account_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:text="@string/login_info_watchFreeContent" app:layout_constraintEnd_toStartOf="parent" app:layout_constraintStart_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/create_account_logo_view" style="@style/vui_create_account_description" />
            <TextView android:textAppearance="@style/vui_create_account_step" android:gravity="center" android:id="@id/create_account_step" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" app:layout_constraintEnd_toStartOf="parent" app:layout_constraintStart_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/create_account_description" style="@style/vui_create_account_step" />
            <com.viafree.viafreeandroidui.VUIEditText android:id="@id/create_account_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:imeOptions="actionNext" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/create_account_step" app:vuiEditTextHint="@string/login_userData_name" />
            <TextView android:textAppearance="@style/vui_create_account_gender_title" android:id="@id/create_account_gender_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/create_account_vertical_margins" android:text="@string/login_userData_gender" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/create_account_name" style="@style/vui_create_account_gender_title" />
            <RadioGroup android:orientation="horizontal" android:id="@id/create_account_gender_selection" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_spacing" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/create_account_gender_title">
                <com.viafree.viafreeandroidui.VUIRadioButton android:id="@id/create_account_gender_male" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/login_userData_male" android:layout_weight="1.0" />
                <com.viafree.viafreeandroidui.VUIRadioButton android:id="@id/create_account_gender_female" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/login_userData_female" android:layout_weight="1.0" android:layout_marginStart="14.0dip" android:layout_marginEnd="14.0dip" />
                <com.viafree.viafreeandroidui.VUIRadioButton android:id="@id/create_account_gender_other" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/login_userData_nonbinary" android:layout_weight="1.0" />
            </RadioGroup>
            <TextView android:id="@id/create_account_gender_error" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/create_account_vertical_margins_small" android:text="@string/login_error_invalid_gender" android:drawablePadding="4.0dip" app:drawableStartCompat="@drawable/vui_ic_edit_text_error" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/create_account_gender_selection" style="@style/vui_error_text" />
            <com.viafree.viafreeandroidui.VUIEditText android:id="@id/create_account_age" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/create_account_vertical_margins" android:inputType="number" android:imeOptions="actionNext" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/create_account_gender_error" app:layout_constraintWidth_percent="0.4" app:vuiEditTextHint="@string/login_userData_age" app:vuiExtraHint="@string/login_age_limit" />
            <com.viafree.viafreeandroidui.VUIEditText android:id="@id/create_account_postal_code" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/create_account_vertical_margins" android:inputType="number" android:imeOptions="actionDone" android:layout_marginStart="@dimen/create_account_vertical_margins_small" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/create_account_age" app:layout_constraintTop_toBottomOf="@id/create_account_gender_error" app:vuiEditTextHint="@string/login_userData_postalnumber" />
            <androidx.constraintlayout.widget.Barrier android:id="@id/create_account_age_postal_barrier" android:layout_width="wrap_content" android:layout_height="wrap_content" app:barrierDirection="bottom" app:constraint_referenced_ids="create_account_age,create_account_postal_code" />
            <androidx.appcompat.widget.AppCompatCheckBox android:textAppearance="@style/vui_check_box_style" android:id="@id/create_user_sign_up_newsletter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/create_account_vertical_margins" android:text="@string/user_details_subscribe_to_newsletter" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/create_account_age_postal_barrier" style="@style/vui_check_box_style" />
            <LinearLayout android:orientation="horizontal" android:id="@id/create_user_terms_and_conditions_wrapper" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/create_user_sign_up_newsletter">
                <androidx.appcompat.widget.AppCompatCheckBox android:textAppearance="@style/vui_check_box_style" android:id="@id/create_user_terms_and_conditions_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/create_account_vertical_margins_small" android:paddingStart="0.0dip" style="@style/vui_check_box_style" />
                <TextView android:textAppearance="@style/vui_check_box_style" android:id="@id/create_user_terms_and_conditions_text" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/vui_check_box_style" />
            </LinearLayout>
            <TextView android:textAppearance="@style/vui_error_text" android:id="@id/create_user_terms_error" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_error_accept_terms" android:drawablePadding="4.0dip" android:layout_marginStart="6.0dip" app:drawableStartCompat="@drawable/vui_ic_edit_text_error" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/create_user_terms_and_conditions_wrapper" style="@style/vui_error_text" />
            <TextView android:textAppearance="@style/vui_error_text" android:id="@id/create_user_generic_error" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/create_account_vertical_margins_small" android:text="@string/unknown_error" app:layout_constraintTop_toBottomOf="@id/create_user_terms_error" style="@style/vui_error_text" />
            <com.viafree.viafreeandroidui.VUIButton android:id="@id/create_user_submit_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/create_account_vertical_margins_small" android:text="@string/login_create_user_title" app:layout_constraintEnd_toStartOf="parent" app:layout_constraintStart_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/create_user_generic_error" app:layout_goneMarginTop="@dimen/create_account_vertical_margins" app:vuiButtonLength="medium" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <FrameLayout android:id="@id/create_user_loading_indicator" android:background="@color/app_background_color" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.viafree.viafreeandroidui.VUILoadingIndicator android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </FrameLayout>
    </FrameLayout>
</ScrollView>